# cpp-kube-client

./: .gitignore  CMakeLists.txt  CMakePresets.json  Roadmap.md  vcpkg.json
include/kubernetes/: client.h  config.h
src/: CMakeLists.txt  config.cpp
tests/: CMakeLists.txt  test_config.cpp
